jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_DadosReducaoZClass_GetValorGrandeTotal(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetValorVendaBruta(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_GetVendaLiquida(const INTPTR ecfHandle, double* value);

DllImport int ECF_DadosReducaoZClass_MontaDadosReducaoZ(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_DAV_Abrir(const INTPTR ecfHandle, const double emissao, const PCHAR decrdocumento, const PCHAR numero, const PCHAR situacao, const PCHAR vendedor, const PCHAR observacao, const PCHAR cpfCnpj, const PCHAR nome, const PCHAR endereco, const int indice);

DllImport int ECF_DAV_Fechar(const INTPTR ecfHandle, const PCHAR observacao);

DllImport int ECF_DAV_RegistrarItem(const INTPTR ecfHandle, const PCHAR codigo, const PCHAR descricao, const PCHAR unidade, const double quantidade, const double vlrunitario, const double desconto, const double acrescimo, const BOOL cancelado);

DllImport int ECF_Desativar(const INTPTR ecfHandle);

DllImport int ECF_DescontoAcrescimoItemAnterior(const INTPTR ecfHandle, const double valorDescontoAcrescimo, const PCHAR descontoAcrescimo, const PCHAR TipoDescontoAcrescimo, const int Item);

DllImport int ECF_Destroy(INTPTR* ecfHandle);

DllImport int ECF_DoAtualizarValorGT(const INTPTR ecfHandle);

DllImport int ECF_DoVerificaValorGT(const INTPTR ecfHandle);

DllImport int ECF_EfetuaPagamento(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EfetuaPagamentoNaoFiscal(const INTPTR ecfHandle, const PCHAR codFormaPagto, const double valor, const PCHAR observacao, const BOOL imprimeVinculado);

DllImport int ECF_EnviaComando(const INTPTR ecfHandle, const PCHAR cmd, const int timeout, PCHAR buffer, const int bufferlen);

DllImport int ECF_EspelhoMFD_DLL(const INTPTR ecfHandle, const double DaTaInicial, const double DaTaFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC);

DllImport int ECF_EspelhoMFD_DLL_COO(const INTPTR ecfHandle, const int COOInicial, const int COOFinal, const PCHAR Arquivo, const int Documentos[], const int QTD_DOC);