jACBrFramework/jACBrFramework/src/jACBrFramework/interop/ECFInterop.java

	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetValorGrandeTotal(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 203</i>
	 */
	int ECF_DadosReducaoZClass_GetValorGrandeTotal(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetValorVendaBruta(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 204</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetValorVendaBruta(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetValorVendaBruta(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetValorVendaBruta(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetValorVendaBruta(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 204</i>
	 */
	int ECF_DadosReducaoZClass_GetValorVendaBruta(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetVendaLiquida(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 205</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_GetVendaLiquida(com.sun.jna.Pointer, java.nio.DoubleBuffer)} and {@link #ECF_DadosReducaoZClass_GetVendaLiquida(com.sun.jna.Pointer, com.sun.jna.ptr.DoubleByReference)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_GetVendaLiquida(int ecfHandle, DoubleByReference value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_GetVendaLiquida(const INTPTR, double*)</code><br>
	 * <i>native declaration : line 205</i>
	 */
	int ECF_DadosReducaoZClass_GetVendaLiquida(int ecfHandle, DoubleBuffer value);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_MontaDadosReducaoZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 206</i><br>
	 * @deprecated use the safer methods {@link #ECF_DadosReducaoZClass_MontaDadosReducaoZ(com.sun.jna.Pointer, java.nio.ByteBuffer, int)} and {@link #ECF_DadosReducaoZClass_MontaDadosReducaoZ(com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DadosReducaoZClass_MontaDadosReducaoZ(int ecfHandle, Pointer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_DadosReducaoZClass_MontaDadosReducaoZ(const INTPTR, PCHAR, const int)</code><br>
	 * <i>native declaration : line 206</i>
	 */
	int ECF_DadosReducaoZClass_MontaDadosReducaoZ(int ecfHandle, ByteBuffer buffer, int bufferLen);
	/**
	 * Original signature : <code>int ECF_DAV_Abrir(const INTPTR, const double, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const int)</code><br>
	 * <i>native declaration : line 207</i><br>
	 * @deprecated use the safer methods {@link #ECF_DAV_Abrir(com.sun.jna.Pointer, double, java.nio.ByteBuffer, java.nio.ByteBuffer, java.nio.ByteBuffer, java.nio.ByteBuffer, java.nio.ByteBuffer, java.nio.ByteBuffer, java.nio.ByteBuffer, java.nio.ByteBuffer, int)} and {@link #ECF_DAV_Abrir(com.sun.jna.Pointer, double, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DAV_Abrir(int ecfHandle, double emissao, Pointer decrdocumento, Pointer numero, Pointer situacao, Pointer vendedor, Pointer observacao, Pointer cpfCnpj, Pointer nome, Pointer endereco, int indice);
	/**
	 * Original signature : <code>int ECF_DAV_Abrir(const INTPTR, const double, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const PCHAR, const int)</code><br>
	 * <i>native declaration : line 207</i>
	 */
	int ECF_DAV_Abrir(int ecfHandle, double emissao, ByteBuffer decrdocumento, ByteBuffer numero, ByteBuffer situacao, ByteBuffer vendedor, ByteBuffer observacao, ByteBuffer cpfCnpj, ByteBuffer nome, ByteBuffer endereco, int indice);
	/**
	 * Original signature : <code>int ECF_DAV_Fechar(const INTPTR, const PCHAR)</code><br>
	 * <i>native declaration : line 208</i><br>
	 * @deprecated use the safer methods {@link #ECF_DAV_Fechar(com.sun.jna.Pointer, java.nio.ByteBuffer)} and {@link #ECF_DAV_Fechar(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
	 */
	@Deprecated 
	int ECF_DAV_Fechar(int ecfHandle, Pointer observacao);
	/**
	 * Original signature : <code>int ECF_DAV_Fechar(const INTPTR, const PCHAR)</code><br>
	 * <i>native declaration : line 208</i>
	 */
	int ECF_DAV_Fechar(int ecfHandle, ByteBuffer observacao);
	/**
	 * Original signature : <code>int ECF_DAV_RegistrarItem(const INTPTR, const PCHAR, const PCHAR, const PCHAR, const double, const double, const double, const double, const BOOL)</code><br>
	 * <i>native declaration : line 209</i><br>
	 * @deprecated use the safer methods {@link #ECF_DAV_RegistrarItem(com.sun.jna.Pointer, java.nio.ByteBuffer, java.nio.ByteBuffer, java.nio.ByteBuffer, double, double, double, double, boolean)} and {@link #ECF_DAV_RegistrarItem(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer, double, double, double, double, boolean)} instead
	 */
	@Deprecated 
	int ECF_DAV_RegistrarItem(int ecfHandle, Pointer codigo, Pointer descricao, Pointer unidade, double quantidade, double vlrunitario, double desconto, double acrescimo, boolean cancelado);
	/**
	 * Original signature : <code>int ECF_DAV_RegistrarItem(const INTPTR, const PCHAR, const PCHAR, const PCHAR, const double, const double, const double, const double, const BOOL)</code><br>
	 * <i>native declaration : line 209</i>
	 */
	int ECF_DAV_RegistrarItem(int ecfHandle, ByteBuffer codigo, ByteBuffer descricao, ByteBuffer unidade, double quantidade, double vlrunitario, double desconto, double acrescimo, boolean cancelado);
	/**
	 * Original signature : <code>int ECF_Desativar(const INTPTR)</code><br>
	 * <i>native declaration : line 210</i>
	 */
	int ECF_Desativar(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DescontoAcrescimoItemAnterior(const INTPTR, const double, const PCHAR, const PCHAR, const int)</code><br>
	 * <i>native declaration : line 211</i><br>
	 * @deprecated use the safer methods {@link #ECF_DescontoAcrescimoItemAnterior(com.sun.jna.Pointer, double, java.nio.ByteBuffer, java.nio.ByteBuffer, int)} and {@link #ECF_DescontoAcrescimoItemAnterior(com.sun.jna.Pointer, double, com.sun.jna.Pointer, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_DescontoAcrescimoItemAnterior(int ecfHandle, double valorDescontoAcrescimo, Pointer descontoAcrescimo, Pointer TipoDescontoAcrescimo, int Item);
	/**
	 * Original signature : <code>int ECF_DescontoAcrescimoItemAnterior(const INTPTR, const double, const PCHAR, const PCHAR, const int)</code><br>
	 * <i>native declaration : line 211</i>
	 */
	int ECF_DescontoAcrescimoItemAnterior(int ecfHandle, double valorDescontoAcrescimo, ByteBuffer descontoAcrescimo, ByteBuffer TipoDescontoAcrescimo, int Item);
	/**
	 * Original signature : <code>int ECF_Destroy(INTPTR*)</code><br>
	 * <i>native declaration : line 212</i>
	 */
	int ECF_Destroy(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DoAtualizarValorGT(const INTPTR)</code><br>
	 * <i>native declaration : line 213</i>
	 */
	int ECF_DoAtualizarValorGT(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_DoVerificaValorGT(const INTPTR)</code><br>
	 * <i>native declaration : line 214</i>
	 */
	int ECF_DoVerificaValorGT(int ecfHandle);
	/**
	 * Original signature : <code>int ECF_EfetuaPagamento(const INTPTR, const PCHAR, const double, const PCHAR, const BOOL)</code><br>
	 * <i>native declaration : line 215</i><br>
	 * @deprecated use the safer methods {@link #ECF_EfetuaPagamento(com.sun.jna.Pointer, java.nio.ByteBuffer, double, java.nio.ByteBuffer, boolean)} and {@link #ECF_EfetuaPagamento(com.sun.jna.Pointer, com.sun.jna.Pointer, double, com.sun.jna.Pointer, boolean)} instead
	 */
	@Deprecated 
	int ECF_EfetuaPagamento(int ecfHandle, Pointer codFormaPagto, double valor, Pointer observacao, boolean imprimeVinculado);
	/**
	 * Original signature : <code>int ECF_EfetuaPagamento(const INTPTR, const PCHAR, const double, const PCHAR, const BOOL)</code><br>
	 * <i>native declaration : line 215</i>
	 */
	int ECF_EfetuaPagamento(int ecfHandle, ByteBuffer codFormaPagto, double valor, ByteBuffer observacao, boolean imprimeVinculado);
	/**
	 * Original signature : <code>int ECF_EfetuaPagamentoNaoFiscal(const INTPTR, const PCHAR, const double, const PCHAR, const BOOL)</code><br>
	 * <i>native declaration : line 216</i><br>
	 * @deprecated use the safer methods {@link #ECF_EfetuaPagamentoNaoFiscal(com.sun.jna.Pointer, java.nio.ByteBuffer, double, java.nio.ByteBuffer, boolean)} and {@link #ECF_EfetuaPagamentoNaoFiscal(com.sun.jna.Pointer, com.sun.jna.Pointer, double, com.sun.jna.Pointer, boolean)} instead
	 */
	@Deprecated 
	int ECF_EfetuaPagamentoNaoFiscal(int ecfHandle, Pointer codFormaPagto, double valor, Pointer observacao, boolean imprimeVinculado);
	/**
	 * Original signature : <code>int ECF_EfetuaPagamentoNaoFiscal(const INTPTR, const PCHAR, const double, const PCHAR, const BOOL)</code><br>
	 * <i>native declaration : line 216</i>
	 */
	int ECF_EfetuaPagamentoNaoFiscal(int ecfHandle, ByteBuffer codFormaPagto, double valor, ByteBuffer observacao, boolean imprimeVinculado);
	/**
	 * Original signature : <code>int ECF_EnviaComando(const INTPTR, const PCHAR, const int, PCHAR, const int)</code><br>
	 * <i>native declaration : line 217</i><br>
	 * @deprecated use the safer methods {@link #ECF_EnviaComando(com.sun.jna.Pointer, java.nio.ByteBuffer, int, java.nio.ByteBuffer, int)} and {@link #ECF_EnviaComando(com.sun.jna.Pointer, com.sun.jna.Pointer, int, com.sun.jna.Pointer, int)} instead
	 */
	@Deprecated 
	int ECF_EnviaComando(int ecfHandle, Pointer cmd, int timeout, Pointer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_EnviaComando(const INTPTR, const PCHAR, const int, PCHAR, const int)</code><br>
	 * <i>native declaration : line 217</i>
	 */
	int ECF_EnviaComando(int ecfHandle, ByteBuffer cmd, int timeout, ByteBuffer buffer, int bufferlen);
	/**
	 * Original signature : <code>int ECF_EspelhoMFD_DLL(const INTPTR, const double, const double, const PCHAR, const int[], const int)</code><br>
	 * <i>native declaration : line 218</i><br>
	 * @deprecated use the safer methods {@link #ECF_EspelhoMFD_DLL(com.sun.jna.Pointer, double, double, java.nio.ByteBuffer, int[], int)} and {@link #ECF_EspelhoMFD_DLL(com.sun.jna.Pointer, double, double, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, int)} instead
	 */
	@Deprecated 
	int ECF_EspelhoMFD_DLL(int ecfHandle, double DaTaInicial, double DaTaFinal, Pointer Arquivo, IntByReference Documentos, int QTD_DOC);
	/**
	 * Original signature : <code>int ECF_EspelhoMFD_DLL(const INTPTR, const double, const double, const PCHAR, const int[], const int)</code><br>
	 * <i>native declaration : line 218</i>
	 */
	int ECF_EspelhoMFD_DLL(int ecfHandle, double DaTaInicial, double DaTaFinal, ByteBuffer Arquivo, int Documentos[], int QTD_DOC);
	/**
	 * Original signature : <code>int ECF_EspelhoMFD_DLL_COO(const INTPTR, const int, const int, const PCHAR, const int[], const int)</code><br>
	 * <i>native declaration : line 219</i><br>
	 * @deprecated use the safer methods {@link #ECF_EspelhoMFD_DLL_COO(com.sun.jna.Pointer, int, int, java.nio.ByteBuffer, int[], int)} and {@link #ECF_EspelhoMFD_DLL_COO(com.sun.jna.Pointer, int, int, com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, int)} instead
	 */
	@Deprecated 
	int ECF_EspelhoMFD_DLL_COO(int ecfHandle, int COOInicial, int COOFinal, Pointer Arquivo, IntByReference Documentos, int QTD_DOC);
